# slam_rover

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz  mapper_params_online_async.yaml  rover_nav2.yaml  turtlebot3_lds_2d.lua
launch/: 1_rviz.launch.py  gazebo_rover.launch.py  navigation2_rover.launch.py  online_async_launch.py
map/: map_blocks12.pgm  map_blocks12.yaml
src/: slam_rover.cpp
urdf/rover_proto_A1/: cartographer.rviz  config.rviz  nav2_rviz.rviz  rover_proto_A1_gps.sdf  rover_proto_A1_gps.urdf  rover_proto_A1_rviz.urdf
urdf/rover_proto_A1/config/: joint_names_rover_assembly_vA.yaml
urdf/rover_proto_A1/meshes/: Camera_Back_Link.STL  Camera_Back_Link.dae  Camera_Fwd_Link.STL  Chassis.STL  Chassis.dae  Lidar_Back_Link.STL  Lidar_Fwd_Link.STL  Lights_Back_Link.STL  Lights_Fwd_Link.STL  Lights_Left_Link.STL  Lights_Right_Link.STL  Wheel_1_Link.STL  Wheel_2_Link.STL  Wheel_3_Link.STL  Wheel_4_Link.STL
worlds/: blocks.sdf  blocks12.sdf
